# image-mosaic-generator

./: .gitignore  README.md  package-lock.json  package.json  performance.md  vite.config.js
.github/workflows/: ci.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
ui/: generate-state.mjs  generate-state.test.mjs  index.html  main.js  styles.css  ui.js
ui/features/generate/: generate-api.js  generate-api.test.mjs
ui/shared/api/: tauri-client.js
