[package]
name = "mosaic-gui"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
rayon = "1.11.0"
walkdir = "2.5.0"
tokio = { version = "1", features = ["full"] }
base64 = "0.22.1"
thiserror = "2.0.17"
kiddo = "5.2"

